--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/categories/category_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/categories/category_form.html
@@ -4,101 +4,101 @@
 <head th:replace="fragments :: page_head(${pageTitle}, 'none')" />
 
 <body>
-    <div class="container-fluid">
-        <div th:replace="navigation :: menu"></div>
-        <div>
-            <h2>Manage Category | [[${pageTitle}]]</h2>
-        </div>
-        <form th:action="@{/categories/save}" method="post" style="max-width: 500px; margin: 0 auto;"
-            th:object="${category}" enctype="multipart/form-data" onsubmit="return checkUnique(this)">
-            <input type="hidden" th:field="*{id}" />
-            <div class="border border-secondary rounded p-3">
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label"> Category Name </label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" th:field="*{name}" required maxlength="128" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label"> Alias </label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" th:field="*{alias}" required maxlength="64" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label"> Parent Category </label>
-                    <div class="col-sm-8">
-                        <select class="form-control" th:field="*{parent}">
-                            <option value="0">[No Parent]</option>
-                            <th:block th:each="cat: ${listCategories}">
-                                <option th:value="${cat.id}">[[${cat.name}]]</option>
-                            </th:block>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label"> Image </label>
-                    <div class="col-sm-8">
-                        <input type="hidden" th:field="*{image}" /> <input type="file" name="imagePhoto" id="fileImage"
-                            accept="image/png, image/jpeg" class="mb-2" /> <img class="img-fluid" alt="image photo"
-                            th:src="@{${category.imagePath}}" id="thumbnail" width="120px" height="110px" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label"> Enable </label>
-                    <div class="col-sm-8">
-                        <input type="checkbox" th:field="*{enabled}" />
-                    </div>
-                </div>
-                <div class="text-center">
-                    <input type="submit" value="Save" class="btn btn-primary m-3" /> <input type="button" value="Cancel"
-                        class="btn btn-secondary" id="buttonCancel" />
-                </div>
-            </div>
-        </form>
-        <div th:replace="modal_fragments :: modal_dialog"></div>
-        <div th:replace="fragments :: footer"></div>
-    </div>
-    <script type="text/javascript">
-        moduleURL = "[[@{/categories}]]";
+	<div class="container-fluid">
+		<div th:replace="navigation :: menu"></div>
+		<div>
+			<h2>Manage Category | [[${pageTitle}]]</h2>
+		</div>
+		<form th:action="@{/categories/save}" method="post" style="max-width: 500px; margin: 0 auto;" th:object="${category}"
+			enctype="multipart/form-data" onsubmit="return checkUnique(this)">
+			<input type="hidden" th:field="*{id}" />
+			<div class="border border-secondary rounded p-3">
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label"> Category Name </label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control" th:field="*{name}" required maxlength="128" />
+					</div>
+				</div>
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label"> Alias </label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control" th:field="*{alias}" required maxlength="64" />
+					</div>
+				</div>
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label"> Parent Category </label>
+					<div class="col-sm-8">
+						<select class="form-control" th:field="*{parent}">
+							<option value="0">[No Parent]</option>
+							<th:block th:each="cat: ${listCategories}">
+								<option th:value="${cat.id}">[[${cat.name}]]</option>
+							</th:block>
+						</select>
+					</div>
+				</div>
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label"> Image </label>
+					<div class="col-sm-8">
+						<input type="hidden" th:field="*{image}" /> <input type="file" name="imagePhoto" id="fileImage"
+							accept="image/png, image/jpeg" class="mb-2" /> <img th:if="${category.id==null}" class="img-fluid"
+							th:src="@{/images/image-thumbnail.png}" alt="image photo" id="thumbnail" width="120px" height="110px" /> <img
+							th:if="${category.id!=null}" class="img-fluid" th:src="@{${category.imagePath}}" alt="image photo" id="thumbnail"
+							width="120px" height="110px" />
+					</div>
+				</div>
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label"> Enable </label>
+					<div class="col-sm-8">
+						<input type="checkbox" th:field="*{enabled}" />
+					</div>
+				</div>
+				<div class="text-center">
+					<input type="submit" value="Save" class="btn btn-primary m-3" /> <input type="button" value="Cancel"
+						class="btn btn-secondary" id="buttonCancel" />
+				</div>
+			</div>
+		</form>
+		<div th:replace="modal_fragments :: modal_dialog"></div>
+		<div th:replace="fragments :: footer"></div>
+	</div>
+	<script type="text/javascript">
+		moduleURL = "[[@{/categories}]]";
 
-        function checkUnique(form) {
-            catId = $("#id").val();
-            catName = $("#name").val();
-            catAlias = $("#alias").val();
-            csrfValue = $("input[name='_csrf']").val();
-            url = "[[@{/categories/check_unique}]]";
-            params = {
-					id : catId,
-							name : catName,
-							alias : catAlias,
-							_csrf : csrfValue
-						};
-						$
-								.post(
-										url,
-										params,
-										function(response) {
-											if (response == 'OK') {
-												form.submit();
-											} else if (response == 'DuplicateName') {
-												showWarningModal("There is another category having the name "
-														+ catName);
-											} else if (response == 'DuplicateAlias') {
-												showWarningModal("There is another category having the alias "
-														+ catAlias);
-											} else {
-												showErrorModal("Deo biet la cai loi gi luon");
-											}
-										})
-								.fail(
-										function() {
-											showErrorModal("Unknow response from server");
-										});
-						return false;
-					}
-				</script>
-    <script type="text/javascript" th:src="@{/js/common_form.js}"></script>
+		function checkUnique(form) {
+			catId = $("#id").val();
+			catName = $("#name").val();
+			catAlias = $("#alias").val();
+			csrfValue = $("input[name='_csrf']").val();
+			url = "[[@{/categories/check_unique}]]";
+			params = {
+				id : catId,
+				name : catName,
+				alias : catAlias,
+				_csrf : csrfValue
+			};
+			$
+					.post(
+							url,
+							params,
+							function(response) {
+								if (response == 'OK') {
+									form.submit();
+								} else if (response == 'DuplicateName') {
+									showWarningModal("There is another category having the name "
+											+ catName);
+								} else if (response == 'DuplicateAlias') {
+									showWarningModal("There is another category having the alias "
+											+ catAlias);
+								} else {
+									showErrorModal("Deo biet la cai loi gi luon");
+								}
+							}).fail(function() {
+						showErrorModal("Unknow response from server");
+					});
+			return false;
+		}
+	</script>
+	<script type="text/javascript" th:src="@{/js/common_form.js}"></script>
 </body>
 
 </html>
