--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_details.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_details.html
@@ -2,13 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 	<div th:fragment="content" id="divProductDetails">
-		<div class="form-inline m-2" id="divDetail0">
-			<label class="m-2">Name: </label>
-			<input type="text" class="form-control w-25" name="detailNames" maxlength="255"/>
-			<label class="m-2">Value: </label>
-			<input type="text" class="form-control w-25" name="detailValues" maxlength="255"/>
+		<th:block th:each="detail, status : ${product.details}">
+			<div class="form-inline m-2" th:id="'divDetail'+${status.index}">
+				<label class="m-2">Name: </label> <input type="text" class="form-control w-25" th:value="${detail.name}"
+					name="detailNames" maxlength="255" /> <label class="m-2">Value: </label> <input type="text"
+					class="form-control w-25" name="detailValues" maxlength="255" th:value="${detail.value}" /> <a name="linkRemoveDetail"
+					class="btn fas fa-times-circle fa-2x icon-dark float-right" title="remove this image"></a>
+			</div>
+		</th:block>
+
+		<div class="form-inline m-2" th:id="'divDetail'+${#lists.size(product.details)}">
+			<label class="m-2">Name: </label> <input type="text" class="form-control w-25" name="detailNames" maxlength="255" />
+			<label class="m-2">Value: </label> <input type="text" class="form-control w-25" name="detailValues" maxlength="255" />
 		</div>
-		
+
 	</div>
 </body>
 </html>
