--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
@@ -30,9 +30,18 @@
 		<div class="form-group row">
 			<label class="col-sm-2 col-form-label"> Category </label>
 			<div class="col-sm-10">
-				<select th:field="*{category}" class="form-control" required="required">
+				<th:block th:if="${product.category != null}">
+					<select th:field="*{category}" class="form-control" required="required">
+						<th:block th:each="cat : ${product.brand.categories}">
+							<option th:value="${cat.id}">[[${cat.name}]]</option>
+						</th:block>
+					</select>
+				</th:block>
+				<th:block th:if="${product.category == null}">
+					<select th:field="*{category}" class="form-control" required="required">
 
-				</select>
+					</select>
+				</th:block>
 			</div>
 		</div>
 
@@ -56,14 +65,14 @@
 				<input type="number" min="0" th:field="*{cost}" class="form-control" />
 			</div>
 		</div>
-		
+
 		<div class="form-group row">
 			<label class="col-sm-2 col-form-label"> Price </label>
 			<div class="col-sm-10">
 				<input type="number" min="0" th:field="*{price}" class="form-control" />
 			</div>
 		</div>
-		
+
 		<div class="form-group row">
 			<label class="col-sm-2 col-form-label"> Discount </label>
 			<div class="col-sm-10">
