--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -3,15 +3,12 @@
 <head th:replace="fragments :: page_head('Home - Shopme Admin', 'none')" />
 <body>
 	<div class="container-fluid">
-
 		<div th:replace="navigation :: menu"></div>
-
 		<div>
 			<h2>Shopme Control Panel</h2>
-			Welcome <a th:href="@{/account}" sec:authentication="principal.fullName"></a>
-		 || <span sec:authentication="principal.authorities"></span>
+			Welcome <a th:href="@{/account}" sec:authentication="principal.fullName"></a> || <span
+				sec:authentication="principal.authorities"></span>
 		</div>
-
 		<div th:replace="fragments :: footer"></div>
 	</div>
 </body>
