--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_details.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_details.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<div th:fragment="content" id="divProductDetails">
-    <th:block th:each="detail, status : ${product.details}">
-        <input type="hidden" name="detailIDs" th:value="${detail.id}">
-        <div class="form-inline m-2" th:id="'divDetail'+${status.index}">
-            <label class="m-2">Name: </label>
-            <input type="text" class="form-control w-25" th:value="${detail.name}"
-                   name="detailNames" maxlength="255"/>
-            <label
-                    class="m-2">Value: </label>
-            <input type="text" class="form-control w-25" name="detailValues" maxlength="255"
-                   th:value="${detail.value}"/> <a name="linkRemoveDetail"
-                                                   class="btn fas fa-times-circle fa-2x icon-dark float-right"
-                                                   title="remove this image"></a>
-        </div>
-    </th:block>
+	<div th:fragment="content" id="divProductDetails">
+		<th:block th:each="detail, status : ${product.details}">
+			<input type="hidden" name="detailIDs" th:value="${detail.id}">
+			<div class="form-inline m-2" th:id="'divDetail'+${status.index}">
+				<label class="m-2">Name: </label> <input type="text" class="form-control w-25" th:value="${detail.name}"
+					name="detailNames" maxlength="255" /> <label class="m-2">Value: </label> <input type="text"
+					class="form-control w-25" name="detailValues" maxlength="255" th:value="${detail.value}" /> <a
+					name="linkRemoveDetail" class="btn fas fa-times-circle fa-2x icon-dark float-right" title="remove this image"></a>
+			</div>
+		</th:block>
 
-    <div class="form-inline m-2" th:id="'divDetail'+${#lists.size(product.details)}">
-        <input type="hidden" name="detailIDs" value="0">
-        <label class="m-2">Name: </label> <input type="text" class="form-control w-25" name="detailNames"
-                                                 maxlength="255"/>
-        <label class="m-2">Value: </label> <input type="text" class="form-control w-25" name="detailValues"
-                                                  maxlength="255"/>
-    </div>
+		<div class="form-inline m-2" th:id="'divDetail'+${#lists.size(product.details)}">
+			<input type="hidden" name="detailIDs" value="0"> <label class="m-2">Name: </label> <input type="text"
+				class="form-control w-25" name="detailNames" maxlength="255" /> <label class="m-2">Value: </label> <input
+				type="text" class="form-control w-25" name="detailValues" maxlength="255" />
+		</div>
 
-</div>
+	</div>
 </body>
 </html>
