--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_images.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_images.html
@@ -1,57 +1,55 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<div th:fragment="content" th:remove="tag">
-    <div class="row" id="divProductImages">
-        <div class="col border m-3 p-2">
-            <div class="">
-                <label> Main Image: [[${product.mainImage}]]</label>
-            </div>
-            <div class="m-2">
-                <img width="250px" height="200px" id="thumbnail" alt="Main image preview"
-                     th:src="@{${product.mainImagePath}}"
-                     class="img-fluid">
-            </div>
-            <div>
-                <input type="file" id="fileImage" name="fileImage" th:required="${product.mainImage==null}"
-                       accept="image/png, image/jpeg"/>
-            </div>
-            <input type="hidden" th:field="*{mainImage}">
-        </div>
+	<div th:fragment="content" th:remove="tag">
+		<div class="row" id="divProductImages">
+			<div class="col border m-3 p-2">
+				<div class="">
+					<label> Main Image: [[${product.mainImage}]]</label>
+				</div>
+				<div class="m-2">
+					<img width="250px" height="200px" id="thumbnail" alt="Main image preview" th:src="@{${product.mainImagePath}}"
+						class="img-fluid">
+				</div>
+				<div>
+					<input type="file" id="fileImage" name="fileImage" th:required="${product.mainImage==null}"
+						accept="image/png, image/jpeg" />
+				</div>
+				<input type="hidden" th:field="*{mainImage}">
+			</div>
 
-        <th:block th:each="productImage, status : ${product.images}">
-            <div class="col border m-3 p-2" th:id="'divExtraImage' + ${status.index}">
-                <div>
-                    <label> Extra Image #[[${status.index+1}]]: [[${productImage.name}]]</label> <a
-                        class="btn fas fa-times-circle fa-2x icon-dark float-right" title="remove this image"
-                        name="linkRemoveExtraImage"></a>
-                </div>
-                <div class="m-2">
-                    <img width="250px" height="200px" th:id="'extraThumbnail'+${status.index}" alt="cc"
-                         th:src="@{${productImage.imagePath}}" class="img-fluid">
-                </div>
-                <div>
-                    <input type="file" name="extraImage" accept="image/png, image/jpeg"/>
-                </div>
+			<th:block th:each="productImage, status : ${product.images}">
+				<div class="col border m-3 p-2" th:id="'divExtraImage' + ${status.index}">
+					<div>
+						<label> Extra Image #[[${status.index+1}]]: [[${productImage.name}]]</label> <a
+							class="btn fas fa-times-circle fa-2x icon-dark float-right" title="remove this image" name="linkRemoveExtraImage"></a>
+					</div>
+					<div class="m-2">
+						<img width="250px" height="200px" th:id="'extraThumbnail'+${status.index}" alt="cc"
+							th:src="@{${productImage.imagePath}}" class="img-fluid">
+					</div>
+					<div>
+						<input type="file" name="extraImage" accept="image/png, image/jpeg" />
+					</div>
 
-				<input type="hidden" name="imageIds" th:id="'imageId' + ${status.index}" th:value="${productImage.id}">
-				<input type="hidden" name="imageNames" th:id="'imageName' + ${status.index}" th:value="${productImage.name}">
-            </div>
-        </th:block>
-        <div class="col border m-3 p-2" id="divExtraImage">
-            <div>
-                <label> Extra Image</label> <a class="btn fas fa-times-circle fa-2x icon-dark float-right"
-                                               title="remove this image"></a>
-            </div>
-            <div class="m-2">
-                <img width="250px" height="200px" id="extraThumbnail" alt="cc" th:src="@{/images/image-thumbnail.png}"
-                     class="img-fluid">
-            </div>
-            <div>
-                <input type="file" name="extraImage" accept="image/png, image/jpeg"/>
-            </div>
-        </div>
-    </div>
-</div>
+					<input type="hidden" name="imageIds" th:id="'imageId' + ${status.index}" th:value="${productImage.id}"> <input
+						type="hidden" name="imageNames" th:id="'imageName' + ${status.index}" th:value="${productImage.name}">
+				</div>
+			</th:block>
+			<div class="col border m-3 p-2" id="divExtraImage">
+				<div>
+					<label> Extra Image</label> <a class="btn fas fa-times-circle fa-2x icon-dark float-right"
+						title="remove this image"></a>
+				</div>
+				<div class="m-2">
+					<img width="250px" height="200px" id="extraThumbnail" alt="cc" th:src="@{/images/image-thumbnail.png}"
+						class="img-fluid">
+				</div>
+				<div>
+					<input type="file" name="extraImage" accept="image/png, image/jpeg" />
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
