--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Welcome to Shopme</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments :: page_head('MyShop', 'none')" />
 <body>
-	<h1>Welcome to Shopme eCommerce</h1>
+	<div class="container-fluid">
+		<div th:replace="navigation :: header_menu"></div>
+		<div>
+			<h1>Shopping by Categories </h1>
+		</div>
+		<div class="row">
+			<div class="col" th:each="cat : ${listCateogories}">
+				<div>
+					<img alt="" th:src="@{${cat.imagePath}}" width="122px" height="100px" class="img-fluid">
+				</div>
+
+				<div>
+					<a th:href="@{'/c/' + ${cat.alias}}">[[${cat.name}]]</a>
+				</div>
+			</div>
+		</div>
+		<div th:replace="navigation :: footer_menu"></div>
 </body>
 </html>
