--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragments.html
@@ -2,19 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="page_head(title, remove)" th:remove="${remove}">
 
-<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-type">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
 
-<title>[[${title}]]</title>
+    <title>[[${title}]]</title>
 
-<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" type="text/css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{images/style.css}" />
 
-<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/jquery/jquery.min.js}" type="text/javascript"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" type="text/javascript"></script>
 </head>
 <body>
-	<div th:fragment="footer" class="text-center m3">
-		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
-	</div>
+<div class="text-center m3" th:fragment="footer">
+    <p>Shopme Control Panel - Copyright &copy; Shopme</p>
+</div>
 </body>
 </html>
