--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-	<div th:fragment="header_menu">
-		<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-			<a class="navbar-brand" th:href="@{/}"> <img alt="" th:src="@{/images/MyShopLogo.png}" width="100px"
-				height="50px">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="topNavbar">
-				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href=""> Careers </a></li>
-					<li class="nav-item"><a class="nav-link" href=""> Payments </a></li>
-					<li class="nav-item"><a class="nav-link" href=""> Shipping &amp; Delivery </a></li>
-					<li class="nav-item"><a class="nav-link" href=""> Login </a></li>
-					<li class="nav-item"><a class="nav-link" href=""> Register </a></li>
-					<li class="nav-item"><a class="nav-link" href=""> Contact </a></li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-	<div th:fragment="footer_menu">
-		<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bottomNavbar">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="bottomNavbar">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" href=""> About Us </a></li>
-						<li class="nav-item"><a class="nav-link" href=""> Privacy Notice </a></li>
-						<li class="nav-item"><a class="nav-link" href=""> Returns &amp; Refunds </a></li>
-					</ul>
-				</div>
-			</nav>
-		</div>
-		<div class="text-center m3">
-			<p>MyShop - Copyright &copy; MyShop</p>
-		</div>
-	</div>
+<div th:fragment="header_menu">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <a class="navbar-brand" th:href="@{/}"> <img alt="" height="50px" th:src="@{/images/MyShopLogo.png}"
+                                                     width="100px">
+        </a>
+        <button class="navbar-toggler" data-target="#topNavbar, #searchNavbar" data-toggle="collapse" type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="topNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href=""> Careers </a></li>
+                <li class="nav-item"><a class="nav-link" href=""> Payments </a></li>
+                <li class="nav-item"><a class="nav-link" href=""> Shipping &amp; Delivery </a></li>
+                <li class="nav-item"><a class="nav-link" href=""> Login </a></li>
+                <li class="nav-item"><a class="nav-link" href=""> Register </a></li>
+                <li class="nav-item"><a class="nav-link" href=""> Contact </a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
+<div class="row" th:fragment="search_nav">
+    <div class="col-md">
+        <nav class="navbar navbar-expand-sm bg-light">
+            <div class="collapse navbar-collapse" id="searchNavbar">
+                <form class="form-inline" method="get" th:action="@{/search}">
+                    <input class="form-control mr-sm-2" name="keyword" placeholder="input text to search" required
+                           th:value="${keyword}"
+                           type="search">
+                    <input class="btn btn-outline-success" type="submit">
+                </form>
+            </div>
+        </nav>
+    </div>
+</div>
+<div th:fragment="footer_menu">
+    <div>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <button class="navbar-toggler" data-target="#bottomNavbar" data-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="bottomNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href=""> About Us </a></li>
+                    <li class="nav-item"><a class="nav-link" href=""> Privacy Notice </a></li>
+                    <li class="nav-item"><a class="nav-link" href=""> Returns &amp; Refunds </a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="text-center m3">
+        <p>MyShop - Copyright &copy; MyShop</p>
+    </div>
+</div>
 </body>
 </html>
