--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/product_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/product_by_category.html
@@ -4,27 +4,11 @@
 <body>
 <div class="container-fluid">
     <div th:replace="navigation :: header_menu"></div>
-    <div th:if="${listCategoryParent !=null && !listCategoryParent.empty}">
-        <div class="row">
-            <div class="col">
-                <nav>
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item">
-                            <a th:href="@{/}">Home</a>
-                        </li>
-                        <th:block th:each="parent : ${listCategoryParent}">
-                            <li class="breadcrumb-item">
-                                <a th:href="@{'/c/' + ${parent.alias}}">[[${parent.name}]]</a>
-                            </li>
-                        </th:block>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-    </div>
-    <div class="row text-center">
+    <div th:replace="navigation :: search_nav"></div>
+    <div th:replace="breadcrumb :: content"></div>
+    <div class="row text-center ">
         <th:block th:each="cat : ${category.childrent}">
-            <div class="col" th:if="${cat.enabled==true}">
+            <div class="col border" th:if="${cat.enabled==true}">
                 <a th:href="@{'/c/' + ${cat.alias}}">
                     <img alt="" class="rounded" height="100" th:src="@{${cat.imagePath}}">
                     <br>
@@ -36,24 +20,10 @@
     <div class="row">&nbsp;</div>
     <div class="row">
         <th:block th:each="product : ${listProducts}">
-            <div class="col">
-                <div><img alt="" class="img-thumbnail" th:src="@{${product.mainImagePath}}" width="200px">
-                    <br>
-                    <b>[[${product.name}]]</b>
-                </div>
-                <div th:if="${product.discountPercent<=0}">
-                    <span>$[[${product.price}]]</span>
-                </div>
-                <div th:if="${product.discountPercent>0}">
-                    <span style="font-size: large;color: darkred">$[[${product.discountPrice}]]</span>
-                    <del>
-                        <span> $[[${product.price}]]</span>
-                    </del>
-                </div>
-            </div>
-
+            <div th:replace="product/product_fragment :: content"></div>
         </th:block>
     </div>
+    <!--    paging page-->
     <div class="text-center m-1" th:if="${#lists.size(listProducts) > 0}">
         <span> Showing Products # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
     </div>
@@ -88,6 +58,7 @@
             </ul>
         </nav>
     </div>
+    <!--    paging page-->
     <div th:replace="navigation :: footer_menu"></div>
 </body>
 </html>
